tests/ui/consts/required-consts/dead-code-in-dead-fn.no-opt.stderr
error[E0080]: evaluation of `Fail::<i32>::C` failed
  --> $DIR/dead-code-in-dead-fn.rs:9:19
   |
LL |     const C: () = panic!();
   |                   ^^^^^^^^ the evaluated program panicked at 'explicit panic', $DIR/dead-code-in-dead-fn.rs:9:19
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn not_called::<i32>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
